Fixed unhandled exception
FormMain.cs:
                try { fileSystemWatcher1.EnableRaisingEvents = saveEnabled; } catch { } // throws exception (need to investigate)

--- a/TunesFiX/Properties/Resources.resx
+++ b/TunesFiX/Properties/Resources.resx
@@ -119,9 +119,9 @@
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="Monkey" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Monkey.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\images\Monkey.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="TunesFiX" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\TunesFiX.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\images\TunesFiX.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
